--- a/style.css
+++ b/style.css
@@ -24,14 +24,14 @@ body {
   height: auto;
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  margin-top: 6.25rem;
 }
 
 @keyframes drampa {
   from {
     position: relative;
-    left: -10000px;
-    top: 50px;
+    left: -625rem;
+    top: 3.125rem;
   }
   to {
     left: 0;
@@ -41,12 +41,12 @@ body {
 
 header {
   width: 100dvw;
-  height: 70px;
+  height: 11.532125205930807vh;
   display: flex;
   align-items: center;
   justify-content: space-around;
   position: sticky;
-  top: -5px;
+  top: -0.313rem;
   background: #16061f;
   z-index: 5;
   animation: drampa 0.5s;
@@ -55,17 +55,17 @@ header {
 /*  */
 
 header.roll {
-  -webkit-box-shadow: 2px 9px 28px -10px rgba(0, 0, 0, 0.61);
-  -moz-box-shadow: 2px 9px 28px -10px rgba(0, 0, 0, 0.61);
-  box-shadow: 2px 9px 28px -10px rgba(0, 0, 0, 0.61);
+  -webkit-box-shadow: 0.125rem 0.563rem 1.75rem -0.625rem rgba(0, 0, 0, 0.61);
+  -moz-box-shadow: 0.125rem 0.563rem 1.75rem -0.625rem rgba(0, 0, 0, 0.61);
+  box-shadow: 0.125rem 0.563rem 1.75rem -0.625rem rgba(0, 0, 0, 0.61);
 }
 
 header h1.rolagem span {
-  margin-right: 4px;
+  margin-right: 0.25rem;
 }
 
 header h1.rolagem {
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 header h1.rolagem::after {
   content: "ucule";
@@ -77,7 +77,7 @@ header h1.rolagem span::after {
 
 header .nome {
   color: #fff;
-  font-size: 44px;
+  font-size: 2.75rem;
   font-weight: extrabold;
   cursor: pointer;
   transition: 0.2s ease-in-out;
@@ -87,21 +87,21 @@ header nav ul {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 69px;
+  gap: 4.313rem;
   list-style: none;
 }
 header nav ul a {
   text-decoration: none;
   color: #fff;
   opacity: 0.4;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: lighter;
   font-weight: 200;
   transition: 0.5s ease-out;
 }
 header nav ul a:hover {
   color: #ffffff;
-  border-bottom: 2px solid #a224e0;
+  border-bottom: 0.125rem solid #a224e0;
   opacity: 1;
   zoom: 1.01;
 }
@@ -136,14 +136,14 @@ header nav ul a:hover {
   display: flex;
   flex-direction: column;
   width: 60%;
-  padding-left: 200px;
-  gap: 81px;
+  padding-left: 12.5rem;
+  gap: 5.063rem;
 }
 .apresentacao .texto > div {
-  line-height: -8px;
+  line-height: -0.5rem;
 }
 .apresentacao .texto h3 {
-  font-size: 44px;
+  font-size: 2.75rem;
   font-weight: lighter;
 
   white-space: nowrap;
@@ -156,11 +156,11 @@ header nav ul a:hover {
 }
 
 .apresentacao .texto h1 {
-  font-size: 44px;
+  font-size: 2.75rem;
   font-weight: extrabold;
   width: 0;
 
-  border-right: 5px solid #a224e0;
+  border-right: 0.313rem solid #a224e0;
   white-space: nowrap;
   overflow: hidden;
   animation: cursor 1s step-end infinite, escrever 15s steps(22, end) infinite;
@@ -244,7 +244,7 @@ header nav ul a:hover {
 /*  */
 
 .apresentacao .texto h2 {
-  font-size: 44px;
+  font-size: 2.75rem;
   font-style: normal;
   font-weight: 400;
   width: 0;
@@ -255,10 +255,10 @@ header nav ul a:hover {
   animation-fill-mode: forwards; /* Mantém o estado final da animação */
 }
 .apresentacao .texto p {
-  font-size: 20px;
+  font-size: 1.25rem;
   font-style: normal;
   font-weight: 350;
-  margin: -8px 0 20px 0;
+  margin: -0.5rem 0 1.25rem 0;
 
   width: 0;
   overflow: hidden;
@@ -270,15 +270,15 @@ header nav ul a:hover {
 
 .apresentacao .texto div:nth-child(2) {
   display: flex;
-  gap: 42px;
+  gap: 2.625rem;
 }
 
 .apresentacao .texto button {
-  width: 162px;
-  height: 50px;
+  width: 10.125rem;
+  height: 3.125rem;
   background: transparent;
-  padding: 15px 20px;
-  border-radius: 5px;
+  padding: 0.938rem 1.25rem;
+  border-radius: 0.313rem;
   text-align: center;
   cursor: pointer;
 }
@@ -295,7 +295,7 @@ header nav ul a:hover {
 .apresentacao .texto #bt1:hover {
   background: transparent;
   transition: 0.3s ease-in-out;
-  border: 1px solid #ab27f2;
+  border: 0.063rem solid #ab27f2;
 }
 .apresentacao .texto #bt1:hover svg {
   stroke: #e4e4e4;
@@ -311,7 +311,7 @@ header nav ul a:hover {
 }
 
 .apresentacao .texto #bt2 {
-  border: 1px solid #ab27f2;
+  border: 0.063rem solid #ab27f2;
 }
 .apresentacao .texto #bt2 svg {
   stroke: #e4e4e4;
@@ -322,7 +322,7 @@ header nav ul a:hover {
   width: 40%;
 }
 .apresentacao .imagem img {
-  width: 400px;
+  width: 25rem;
 }
 
 /* Primeira senção terminada */
@@ -336,27 +336,27 @@ header nav ul a:hover {
   height: auto;
   display: flex;
   flex-direction: column;
-  padding-top: 90px;
-  padding-left: 150px;
-  gap: 7px;
-  margin-bottom: 90px;
+  padding-top: 5.625rem;
+  padding-left: 9.375rem;
+  gap: 0.438rem;
+  margin-bottom: 9.375rem;
 }
 .sobre img {
-  width: 700px;
+  width: 51.24450951683748vw;
   position: absolute;
-  top: 550px;
+  top: 34.375rem;
   left: 0;
   z-index: -1;
   opacity: 50%;
 }
 .sobre h1 {
-  font-size: 36px;
+  font-size: 2.25rem;
   font-style: normal;
   font-weight: 600;
 }
 
 .sobre div {
-  padding: 10px 50px 10px 40px;
+  padding: 0.625rem 50px 10px 40px;
   display: flex;
   flex-direction: column;
   gap: 20px;
