--- a/mediaquerys.css
+++ b/mediaquerys.css
@@ -25,6 +25,9 @@
     position: relative;
     z-index: 80;
   }
+  .imghidden {
+    display: flex;
+  }
   .hamburguer {
     background: rgba(0, 0, 0, 1);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
