adicionando formulário para envio de Email

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ header nav ul a:hover {
   opacity: 1;
   zoom: 1.01;
 }
-.hidden {
+.hiddenli {
   display: none;
 }
 .imghidden {
@@ -720,7 +720,9 @@ header nav ul a:hover {
   gap: 30px;
   margin-bottom: 50px;
 }
-
+.campotext {
+  z-index: 05;
+}
 .campotext a {
   display: flex;
   flex-direction: column;
@@ -758,4 +760,159 @@ header nav ul a:hover {
   bottom: 40px;
   right: 0;
   opacity: 70%;
+}
+/* Formulário */
+.hhdd {
+  display: none;
+}
+.formulario {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-items: center;
+
+  box-shadow: 0px 0px 500px #000000;
+  position: fixed;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+  background: #fff;
+  border-radius: 18px;
+
+  padding: 20px;
+}
+
+.formulario form div {
+  flex-direction: column;
+  width: 100%;
+}
+
+.formulario .conteiner-closs {
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: right;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.formulario .conteiner-closs:hover {
+  opacity: 1;
+}
+
+.formulario .closs {
+  color: #000;
+  font-size: 20px;
+}
+
+form .exit {
+  color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+
+  font-size: 1.2rem;
+
+  background: transparent;
+  border: none;
+
+  margin-left: 250px;
+}
+
+.formulario form #nome,
+#email,
+#telefone {
+  width: 100%;
+  height: auto;
+  padding: 15px;
+  margin: 0px 0px 10px 0px;
+  color: #252525;
+
+  border: none;
+  border-radius: 10px;
+  background: wheat;
+  outline: none;
+
+  font-size: 0.9rem;
+}
+
+form #nome,
+.email,
+.telefone::placeholdera {
+  color: #b9b9b9;
+}
+form #nome:active {
+  border: 2px solid seagreen;
+}
+/* Focus */
+form #nome:focus {
+  border: 2px solid seagreen;
+}
+
+form #email:focus {
+  border: 2px solid seagreen;
+}
+form #telefone:focus {
+  border: 2px solid seagreen;
+}
+
+form #mensagem {
+  width: 100%;
+  height: 100px;
+  padding: 15px;
+  margin: 0px 0px 10px 0px;
+  color: #272727;
+
+  border: none;
+  border-radius: 10px;
+  background: wheat;
+  outline: none;
+
+  font-size: 1.1rem;
+}
+
+form #mensagem:focus {
+  border: 2px solid seagreen;
+}
+
+label {
+  color: blueviolet;
+
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.botao {
+  width: 100%;
+  padding: 15px;
+  color: #ecebeb;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+
+  font-size: 1.2rem;
+  font-weight: bold;
+
+  background: seagreen;
+  cursor: pointer;
+}
+
+.botao:hover {
+  background: rgb(34, 105, 65);
+}
+
+/* Whatsap */
+.flutuante {
+  width: 70px;
+  height: 70px;
+  border-radius: 50px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 20;
+
+  background: seagreen;
 }
