--- a/mediaquerys.css
+++ b/mediaquerys.css
@@ -28,6 +28,7 @@
   .imghidden {
     display: flex;
   }
+
   .hamburguer {
     background: rgba(0, 0, 0, 1);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
@@ -37,13 +38,10 @@
     width: 200px;
     height: auto;
     padding: 50px;
-
     border-radius: 10px;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     z-index: 4;
   }
   .hidden {
@@ -74,7 +72,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70dvh;
+    height: 70vh;
   }
   .apresentacao {
     display: flex;
@@ -99,7 +97,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100dvw;
+    width: 100vw;
     gap: 3.063rem;
     margin: 0;
     padding: 0;
@@ -118,7 +116,6 @@
     display: flex;
     font-size: 24px;
     justify-content: center;
-
     overflow: visible;
     border: none;
     animation: none;
@@ -174,7 +171,7 @@
     gap: 20px;
   }
 
-  /* HAbilidades */
+  /* Habilidades */
 
   .habilidades {
     display: flex;
@@ -242,7 +239,7 @@
 
   /* Projectos */
   .projectos {
-    width: 100dvw;
+    width: 100vw;
     height: auto;
     padding-top: 90px;
     display: flex;
@@ -256,7 +253,7 @@
     padding-left: 20px;
   }
 
-  /* COntacte */
+  /* Contacte */
 
   .rodape #footerefeito {
     width: 90px;
@@ -272,4 +269,104 @@
     right: 0;
     opacity: 70%;
   }
+}
+/* Formulario */
+.hhdd {
+  display: none;
+}
+.formulario {
+  width: 80%;
+}
+
+.formulario .conteiner-closs {
+  display: flex;
+  align-items: flex-end;
+  justify-content: right;
+}
+
+.formulario .closs {
+  color: #000;
+  font-size: 20px;
+}
+
+form .exit {
+  color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  font-size: 1.2rem;
+  background: transparent;
+  border: none;
+  margin-left: 250px;
+}
+
+.formulario form #nome,
+#email,
+#telefone {
+  width: 100%;
+  height: auto;
+  padding: 15px;
+  margin: 0px 0px 10px 0px;
+  color: #252525;
+  border: none;
+  border-radius: 10px;
+  background: wheat;
+  outline: none;
+  font-size: 0.9rem;
+}
+
+form #nome,
+.email,
+.telefone::placeholder {
+  color: #b9b9b9;
+}
+form #nome:active {
+  border: 2px solid seagreen;
+}
+/* Focus */
+form #nome:focus {
+  border: 2px solid seagreen;
+}
+
+form #email:focus {
+  border: 2px solid seagreen;
+}
+form #telefone:focus {
+  border: 2px solid seagreen;
+}
+
+form #mensagem {
+  margin: 0px 0px 10px 0px;
+  color: #272727;
+  border: none;
+  border-radius: 10px;
+  background: wheat;
+  outline: none;
+  font-size: 1.1rem;
+}
+
+form #mensagem:focus {
+  border: 2px solid seagreen;
+}
+
+label {
+  color: blueviolet;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.botao {
+  width: 100%;
+  padding: 15px;
+  color: #ecebeb;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  background: seagreen;
+}
+
+.botao:hover {
+  background: rgb(34, 105, 65);
 }
