--- a/style.css
+++ b/style.css
@@ -914,5 +914,42 @@ label {
   right: 20px;
   z-index: 20;
 
-  background: seagreen;
+  background: #a224e0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  box-shadow: 0px 0px 10px #000000;
+}
+
+.flutuante:hover {
+  background: #310746;
+  cursor: pointer;
+}
+
+.flutuante svg {
+  width: 40px;
+  height: 40px;
+  animation: sacudir 5s ease-in-out 7.5s infinite;
+}
+
+@keyframes sacudir {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(10deg);
+  }
+  20% {
+    transform: rotate(-10deg);
+  }
+  30% {
+    transform: rotate(10deg);
+  }
+  40% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
